testsuite/tests/parser/should_fail/readFail013.hs
module Main where

-- !!! unterminated ``
a = ``s``
