testsuite/tests/parser/should_fail/readFail013.stderr

readFail013.hs:4:5: parse error on input ‘`’
